# service/user/api/helloworld/v1/registration.pb.go
@@ -1,0 +1,422 @@
+// 路径： ./registraion/api/helloworld/v1/registration
+
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.11
+// 	protoc        v3.21.12
+// source: api/helloworld/v1/registration.proto
+
+// 包名是服务名
+
+package v1
+
+import (
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type RegisterReq struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Username      string                 `protobuf:"bytes,1,opt,name=username,proto3" json:"username,omitempty"`
+	Password      string                 `protobuf:"bytes,2,opt,name=password,proto3" json:"password,omitempty"`
+	Nickname      string                 `protobuf:"bytes,3,opt,name=nickname,proto3" json:"nickname,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *RegisterReq) Reset() {
+	*x = RegisterReq{}
+	mi := &file_api_helloworld_v1_registration_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *RegisterReq) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*RegisterReq) ProtoMessage() {}
+
+func (x *RegisterReq) ProtoReflect() protoreflect.Message {
+	mi := &file_api_helloworld_v1_registration_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use RegisterReq.ProtoReflect.Descriptor instead.
+func (*RegisterReq) Descriptor() ([]byte, []int) {
+	return file_api_helloworld_v1_registration_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *RegisterReq) GetUsername() string {
+	if x != nil {
+		return x.Username
+	}
+	return ""
+}
+
+func (x *RegisterReq) GetPassword() string {
+	if x != nil {
+		return x.Password
+	}
+	return ""
+}
+
+func (x *RegisterReq) GetNickname() string {
+	if x != nil {
+		return x.Nickname
+	}
+	return ""
+}
+
+type RegisterReply struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Msg           string                 `protobuf:"bytes,1,opt,name=msg,proto3" json:"msg,omitempty"` // 这里可以返回注册后的用户ID等
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *RegisterReply) Reset() {
+	*x = RegisterReply{}
+	mi := &file_api_helloworld_v1_registration_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *RegisterReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*RegisterReply) ProtoMessage() {}
+
+func (x *RegisterReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_helloworld_v1_registration_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use RegisterReply.ProtoReflect.Descriptor instead.
+func (*RegisterReply) Descriptor() ([]byte, []int) {
+	return file_api_helloworld_v1_registration_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *RegisterReply) GetMsg() string {
+	if x != nil {
+		return x.Msg
+	}
+	return ""
+}
+
+type LoginReq struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Username      string                 `protobuf:"bytes,1,opt,name=username,proto3" json:"username,omitempty"`
+	Password      string                 `protobuf:"bytes,2,opt,name=password,proto3" json:"password,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *LoginReq) Reset() {
+	*x = LoginReq{}
+	mi := &file_api_helloworld_v1_registration_proto_msgTypes[2]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *LoginReq) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*LoginReq) ProtoMessage() {}
+
+func (x *LoginReq) ProtoReflect() protoreflect.Message {
+	mi := &file_api_helloworld_v1_registration_proto_msgTypes[2]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use LoginReq.ProtoReflect.Descriptor instead.
+func (*LoginReq) Descriptor() ([]byte, []int) {
+	return file_api_helloworld_v1_registration_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *LoginReq) GetUsername() string {
+	if x != nil {
+		return x.Username
+	}
+	return ""
+}
+
+func (x *LoginReq) GetPassword() string {
+	if x != nil {
+		return x.Password
+	}
+	return ""
+}
+
+type LoginReply struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Msg           string                 `protobuf:"bytes,1,opt,name=msg,proto3" json:"msg,omitempty"`
+	Token         string                 `protobuf:"bytes,2,opt,name=token,proto3" json:"token,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *LoginReply) Reset() {
+	*x = LoginReply{}
+	mi := &file_api_helloworld_v1_registration_proto_msgTypes[3]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *LoginReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*LoginReply) ProtoMessage() {}
+
+func (x *LoginReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_helloworld_v1_registration_proto_msgTypes[3]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use LoginReply.ProtoReflect.Descriptor instead.
+func (*LoginReply) Descriptor() ([]byte, []int) {
+	return file_api_helloworld_v1_registration_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *LoginReply) GetMsg() string {
+	if x != nil {
+		return x.Msg
+	}
+	return ""
+}
+
+func (x *LoginReply) GetToken() string {
+	if x != nil {
+		return x.Token
+	}
+	return ""
+}
+
+type GetProfileReq struct {
+	state protoimpl.MessageState `protogen:"open.v1"`
+	// 不需要参数，token 会在 header 里，由中间件处理
+	// 但 Proto 定义通常不能为空，所以这里留空或者放一个 id
+	Id            int64 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetProfileReq) Reset() {
+	*x = GetProfileReq{}
+	mi := &file_api_helloworld_v1_registration_proto_msgTypes[4]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetProfileReq) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetProfileReq) ProtoMessage() {}
+
+func (x *GetProfileReq) ProtoReflect() protoreflect.Message {
+	mi := &file_api_helloworld_v1_registration_proto_msgTypes[4]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetProfileReq.ProtoReflect.Descriptor instead.
+func (*GetProfileReq) Descriptor() ([]byte, []int) {
+	return file_api_helloworld_v1_registration_proto_rawDescGZIP(), []int{4}
+}
+
+func (x *GetProfileReq) GetId() int64 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+type GetProfileReply struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Username      string                 `protobuf:"bytes,1,opt,name=username,proto3" json:"username,omitempty"`
+	Nickname      string                 `protobuf:"bytes,2,opt,name=nickname,proto3" json:"nickname,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetProfileReply) Reset() {
+	*x = GetProfileReply{}
+	mi := &file_api_helloworld_v1_registration_proto_msgTypes[5]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetProfileReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetProfileReply) ProtoMessage() {}
+
+func (x *GetProfileReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_helloworld_v1_registration_proto_msgTypes[5]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetProfileReply.ProtoReflect.Descriptor instead.
+func (*GetProfileReply) Descriptor() ([]byte, []int) {
+	return file_api_helloworld_v1_registration_proto_rawDescGZIP(), []int{5}
+}
+
+func (x *GetProfileReply) GetUsername() string {
+	if x != nil {
+		return x.Username
+	}
+	return ""
+}
+
+func (x *GetProfileReply) GetNickname() string {
+	if x != nil {
+		return x.Nickname
+	}
+	return ""
+}
+
+var File_api_helloworld_v1_registration_proto protoreflect.FileDescriptor
+
+const file_api_helloworld_v1_registration_proto_rawDesc = "" +
+	"\n" +
+	"$api/helloworld/v1/registration.proto\x12\x13api.registration.v1\x1a\x1cgoogle/api/annotations.proto\"a\n" +
+	"\vRegisterReq\x12\x1a\n" +
+	"\busername\x18\x01 \x01(\tR\busername\x12\x1a\n" +
+	"\bpassword\x18\x02 \x01(\tR\bpassword\x12\x1a\n" +
+	"\bnickname\x18\x03 \x01(\tR\bnickname\"!\n" +
+	"\rRegisterReply\x12\x10\n" +
+	"\x03msg\x18\x01 \x01(\tR\x03msg\"B\n" +
+	"\bLoginReq\x12\x1a\n" +
+	"\busername\x18\x01 \x01(\tR\busername\x12\x1a\n" +
+	"\bpassword\x18\x02 \x01(\tR\bpassword\"4\n" +
+	"\n" +
+	"LoginReply\x12\x10\n" +
+	"\x03msg\x18\x01 \x01(\tR\x03msg\x12\x14\n" +
+	"\x05token\x18\x02 \x01(\tR\x05token\"\x1f\n" +
+	"\rGetProfileReq\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\x03R\x02id\"I\n" +
+	"\x0fGetProfileReply\x12\x1a\n" +
+	"\busername\x18\x01 \x01(\tR\busername\x12\x1a\n" +
+	"\bnickname\x18\x02 \x01(\tR\bnickname2\xc1\x02\n" +
+	"\fRegistration\x12f\n" +
+	"\bRegister\x12 .api.registration.v1.RegisterReq\x1a\".api.registration.v1.RegisterReply\"\x14\x82\xd3\xe4\x93\x02\x0e:\x01*\"\t/register\x12Z\n" +
+	"\x05Login\x12\x1d.api.registration.v1.LoginReq\x1a\x1f.api.registration.v1.LoginReply\"\x11\x82\xd3\xe4\x93\x02\v:\x01*\"\x06/login\x12m\n" +
+	"\n" +
+	"GetProfile\x12\".api.registration.v1.GetProfileReq\x1a$.api.registration.v1.GetProfileReply\"\x15\x82\xd3\xe4\x93\x02\x0f\x12\r/user/profileB2\n" +
+	"\x13api.registration.v1P\x01Z\x19user/api/helloworld/v1;v1b\x06proto3"
+
+var (
+	file_api_helloworld_v1_registration_proto_rawDescOnce sync.Once
+	file_api_helloworld_v1_registration_proto_rawDescData []byte
+)
+
+func file_api_helloworld_v1_registration_proto_rawDescGZIP() []byte {
+	file_api_helloworld_v1_registration_proto_rawDescOnce.Do(func() {
+		file_api_helloworld_v1_registration_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_helloworld_v1_registration_proto_rawDesc), len(file_api_helloworld_v1_registration_proto_rawDesc)))
+	})
+	return file_api_helloworld_v1_registration_proto_rawDescData
+}
+
+var file_api_helloworld_v1_registration_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
+var file_api_helloworld_v1_registration_proto_goTypes = []any{
+	(*RegisterReq)(nil),     // 0: api.registration.v1.RegisterReq
+	(*RegisterReply)(nil),   // 1: api.registration.v1.RegisterReply
+	(*LoginReq)(nil),        // 2: api.registration.v1.LoginReq
+	(*LoginReply)(nil),      // 3: api.registration.v1.LoginReply
+	(*GetProfileReq)(nil),   // 4: api.registration.v1.GetProfileReq
+	(*GetProfileReply)(nil), // 5: api.registration.v1.GetProfileReply
+}
+var file_api_helloworld_v1_registration_proto_depIdxs = []int32{
+	0, // 0: api.registration.v1.Registration.Register:input_type -> api.registration.v1.RegisterReq
+	2, // 1: api.registration.v1.Registration.Login:input_type -> api.registration.v1.LoginReq
+	4, // 2: api.registration.v1.Registration.GetProfile:input_type -> api.registration.v1.GetProfileReq
+	1, // 3: api.registration.v1.Registration.Register:output_type -> api.registration.v1.RegisterReply
+	3, // 4: api.registration.v1.Registration.Login:output_type -> api.registration.v1.LoginReply
+	5, // 5: api.registration.v1.Registration.GetProfile:output_type -> api.registration.v1.GetProfileReply
+	3, // [3:6] is the sub-list for method output_type
+	0, // [0:3] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_api_helloworld_v1_registration_proto_init() }
+func file_api_helloworld_v1_registration_proto_init() {
+	if File_api_helloworld_v1_registration_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_helloworld_v1_registration_proto_rawDesc), len(file_api_helloworld_v1_registration_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   6,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_api_helloworld_v1_registration_proto_goTypes,
+		DependencyIndexes: file_api_helloworld_v1_registration_proto_depIdxs,
+		MessageInfos:      file_api_helloworld_v1_registration_proto_msgTypes,
+	}.Build()
+	File_api_helloworld_v1_registration_proto = out.File
+	file_api_helloworld_v1_registration_proto_goTypes = nil
+	file_api_helloworld_v1_registration_proto_depIdxs = nil
+}
