# service/user/api/helloworld/v1/registration_http.pb.go
@@ -1,0 +1,162 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             v3.21.12
+// source: api/helloworld/v1/registration.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationRegistrationGetProfile = "/api.registration.v1.Registration/GetProfile"
+const OperationRegistrationLogin = "/api.registration.v1.Registration/Login"
+const OperationRegistrationRegister = "/api.registration.v1.Registration/Register"
+
+type RegistrationHTTPServer interface {
+	// GetProfile 获取用户信息接口
+	GetProfile(context.Context, *GetProfileReq) (*GetProfileReply, error)
+	// Login 登录接口
+	Login(context.Context, *LoginReq) (*LoginReply, error)
+	// Register 注册接口
+	Register(context.Context, *RegisterReq) (*RegisterReply, error)
+}
+
+func RegisterRegistrationHTTPServer(s *http.Server, srv RegistrationHTTPServer) {
+	r := s.Route("/")
+	r.POST("/register", _Registration_Register0_HTTP_Handler(srv))
+	r.POST("/login", _Registration_Login0_HTTP_Handler(srv))
+	r.GET("/user/profile", _Registration_GetProfile0_HTTP_Handler(srv))
+}
+
+func _Registration_Register0_HTTP_Handler(srv RegistrationHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in RegisterReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationRegistrationRegister)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Register(ctx, req.(*RegisterReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*RegisterReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Registration_Login0_HTTP_Handler(srv RegistrationHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in LoginReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationRegistrationLogin)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Login(ctx, req.(*LoginReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*LoginReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Registration_GetProfile0_HTTP_Handler(srv RegistrationHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetProfileReq
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationRegistrationGetProfile)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetProfile(ctx, req.(*GetProfileReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetProfileReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type RegistrationHTTPClient interface {
+	// GetProfile 获取用户信息接口
+	GetProfile(ctx context.Context, req *GetProfileReq, opts ...http.CallOption) (rsp *GetProfileReply, err error)
+	// Login 登录接口
+	Login(ctx context.Context, req *LoginReq, opts ...http.CallOption) (rsp *LoginReply, err error)
+	// Register 注册接口
+	Register(ctx context.Context, req *RegisterReq, opts ...http.CallOption) (rsp *RegisterReply, err error)
+}
+
+type RegistrationHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewRegistrationHTTPClient(client *http.Client) RegistrationHTTPClient {
+	return &RegistrationHTTPClientImpl{client}
+}
+
+// GetProfile 获取用户信息接口
+func (c *RegistrationHTTPClientImpl) GetProfile(ctx context.Context, in *GetProfileReq, opts ...http.CallOption) (*GetProfileReply, error) {
+	var out GetProfileReply
+	pattern := "/user/profile"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationRegistrationGetProfile))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// Login 登录接口
+func (c *RegistrationHTTPClientImpl) Login(ctx context.Context, in *LoginReq, opts ...http.CallOption) (*LoginReply, error) {
+	var out LoginReply
+	pattern := "/login"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationRegistrationLogin))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// Register 注册接口
+func (c *RegistrationHTTPClientImpl) Register(ctx context.Context, in *RegisterReq, opts ...http.CallOption) (*RegisterReply, error) {
+	var out RegisterReply
+	pattern := "/register"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationRegistrationRegister))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
